@@ -4,6 +4,7 @@ v2.4
  - Added option for lossless JPEG cropping
  - Added JPEG quality slider setting
  - Added option for rule of thirds guideline
+ - Added ability to open and queue multiple files
  - Tweaked some info text in settings
 
 v2.3
